--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-
+# 忽略 application-*.yml 文件
+application.yml
 ### STS ###
 .apt_generated
 .classpath
